spacing fix

--- a/css/obBase.css
+++ b/css/obBase.css
@@ -2071,6 +2071,10 @@ input[type="checkbox"].fieldItem:checked + label:before {
   margin-left: 10px;
 }
 
+#ov1  .marginLeft12 {
+  margin-left: 12px;
+}
+
 #ov1  .marginLeft88 {
   margin-left: 88px;
 }
